--- a/package.json
+++ b/package.json
@@ -9,21 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.3.1",
-    "next-mdx-remote": "^5.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "next": "^15.5.0",
+    "nextra": "^4.3.0",
+    "nextra-theme-docs": "^4.3.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4.1.5",
-    "typescript": "^5"
+    "eslint-config-next": "15.3.1"
   }
 }
